manifests/registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry
  name: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      restartPolicy: Always
      containers:
        - name: registry
          image: registry:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: http
          volumeMounts:
            - name: registry
              mountPath: /var/lib/registry
            - name: config
              mountPath: /etc/distribution
              subPath: config.yaml
      volumes:
        - name: registry
          persistentVolumeClaim:
            claimName: registry
        - name: config
          configMap:
            name: registry
